# CG-2026-ExercicioOBJ

./: CMakeLists.txt  README.md
src/ExercicioOBJ/: main.cpp  shader.fs  shader.h
